force-app/main/default/objects/SFDC_Budget_Entry__c/SFDC_Budget_Entry__c.object-meta.xml
<CustomObject>
    <description>Rolls up to a MDF budget. Used show additions or removals to/ from a given budget</description>
    <label>Budget Entry</label>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>