force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>The budget the budget entry is allocated to</description>
    <label>Budget</label>
    <referenceTo>SFDC_Budget__c</referenceTo>
    <relationshipLabel>Budget Entries</relationshipLabel>
    <relationshipName>R00N30000002DjClEAK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>