force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description about the budget entry</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>