force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Period_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Period_Revenue__c</fullName>
    <description>The revenue attributable to the budget account in the given time period</description>
    <inlineHelpText>The revenue attributable to the budget account in the given time period</inlineHelpText>
    <label>Period Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>