force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Prior_Period_Carry_Over__c.field-meta.xml
<CustomField>
    <fullName>Prior_Period_Carry_Over__c</fullName>
    <description>The co-op carry-over accrual from the prior time period for the budget account</description>
    <inlineHelpText>The co-op carry-over accrual from the prior time period for the budget account</inlineHelpText>
    <label>Prior Period Carry Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>